--- a/Notebooks/NetFlixBandwidth.ipynb
+++ b/Notebooks/NetFlixBandwidth.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:50b41d5cc4d5043dba02adf33304787574dfd9e2854aaa8290f8251eba5ca30d"
+  "signature": "sha256:2ddc558a20ee5cbfe5f4ed64d3ec94e70d9f4c0e759bf4e55fce1647e77c5c9a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -72,12 +72,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "bytesPerSecond = 0.3e9 / 60 / 60\n",
-      "print bytesPerSecond"
+      "bytesPerSecond = 2.3e9 / 60 / 60\n",
+      "print(bytesPerSecond)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "638888.8888888889\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -91,11 +100,21 @@
      "collapsed": false,
      "input": [
       "bitsPerSecond = bytesPerSecond * 8\n",
-      "bitsPerSecond "
+      "print(bitsPerSecond)\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "5111111.111111111"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -111,6 +130,49 @@
       "\n",
       "How many students does it take watching netflix at Good, and Best HD to use it all up??\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "lutherbw = 2.0e9\n",
+      "lutherbw / bitsPerSecond"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "391.30434782608694"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%pylab inline\n",
+      "rates = [0.3e9, 0.7e9, 1.0e9, 2.3e9]\n",
+      "numStudents = [lutherbw / (8*x/60/60) for x in rates]\n",
+      "plot(rates,numStudents)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
