--- a/Notebooks/NetFlixBandwidth.ipynb
+++ b/Notebooks/NetFlixBandwidth.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2ddc558a20ee5cbfe5f4ed64d3ec94e70d9f4c0e759bf4e55fce1647e77c5c9a"
+  "signature": "sha256:56e54c63061af70dde5f1f305a2332656f9d9168d429290da06d084ec12e23ad"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -269,9 +269,9 @@
      "collapsed": false,
      "input": [
       "satDelay = 2 * earthToSatellite_meters / 3.0e8\n",
-      "print satDelay\n",
+      "print(satDelay)\n",
       "fiberDelay = decorahToLondon_meters / 2.5e8\n",
-      "print fiberDelay"
+      "print(fiberDelay)"
      ],
      "language": "python",
      "metadata": {},
@@ -289,7 +289,7 @@
      "collapsed": false,
      "input": [
       "Rfiber = 2.448e9\n",
-      "print Rfiber * fiberDelay"
+      "print(Rfiber * fiberDelay)"
      ],
      "language": "python",
      "metadata": {},
