--- a/_posts/2014-09-17-inclass.markdown
+++ b/_posts/2014-09-17-inclass.markdown
@@ -32,4 +32,4 @@ However:  Think about the fact that a 32 bit integer can hold a number up to 4,2
 
 * the ``&`` operator is the bitwise AND operator this ensures that only the 8 leftmost bits are kept, and all the others are zeroed out.
 
-* You can take four bytes and glue them back together using the left shift ``<<`` operator and the bitwise OR ``|`` operator.  I'll let you think about that for a while.
+* You can take four bytes and glue them back together using the left shift ``<<`` operator and the bitwise OR ``|`` operator.  Think about using the ``|`` in an accumulator pattern.
